Closed
Bug 280200
Opened 21 years ago
Closed 21 years ago
[patch] improve IME look and feel : IME color
Categories
(Camino Graveyard :: HTML Form Controls, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.9
People
(Reporter: waveridervsnrz, Assigned: mikepinkerton)
Details
Attachments
(1 file, 1 obsolete file)
|
3.61 KB,
patch
|
sfraser_bugs
:
review+
jaas
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.6) Gecko/20041230 Camino/0.8.2
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.6) Gecko/20041230 Camino/0.8.2
correct IME Constants selecting and improve IME look and feel.
Reproducible: Always
Steps to Reproduce:
| Assignee | ||
Comment 2•21 years ago
|
||
+ if (selRange.length == 0)
+ {
+ switch (aUnderlineStyle) {
+ case 1:
+ return NS_TEXTRANGE_RAWINPUT;
+ break;
+
+ case 2:
+ return NS_TEXTRANGE_SELECTEDRAWTEXT;
+ break;
+ }
+ }
don't use multiple returns here. use a single variable for the return value
(initialized appropriately) and set it in the switch statements, then return
that var at the end of the routine. Makes the flow much easier to follow.
Summary: [patch] improve IME look and feel : IME color → [patch] improve IME look and feel : IME color
Shall I confirm this guys.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino0.9
Attachment #172671 -
Attachment is obsolete: true
Comment 5•21 years ago
|
||
Comment on attachment 172798 [details] [diff] [review]
Thank you advice. I rewrite a patch.
attr could remain uninitialized if none of the case statements are hit. Either
initialize it or add default: statements.
Attachment #172798 -
Flags: review-
Comment 6•21 years ago
|
||
Comment on attachment 172798 [details] [diff] [review]
Thank you advice. I rewrite a patch.
Sorry, I'm blind. The patch is fine. I'll test then check it in.
Attachment #172798 -
Flags: review- → review+
Attachment #172798 -
Flags: review+
Comment 7•21 years ago
|
||
I checked in the patch (with minor tweaks). Thanks!
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•