Fix bug 280200, patch by <waveridervsnrz@yahoo.co.jp> -- improve IME look and feel by tweaking constants. Also standardized method name case. r=josh, sr=me